<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="jpwp.project.pg.erunner.MainMenu"
    android:background="#3A3C4F">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/applogo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/btnMainMenuStartRun"
        android:id="@+id/btnGoToHudFromMainMenu"
        android:layout_marginTop="15dp"
        android:background="#2f3140"
        android:textColor="#7d968d"
        android:padding="4dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:clickable="true" />

    <Button
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/btnMainMenuEditRoutes"
        android:id="@+id/btnMainMenuGoToRoutesMenu"
        android:background="#2f3140"
        android:textColor="#7d968d"
        android:layout_alignTop="@+id/btnGoToHudFromMainMenu"
        android:layout_toRightOf="@+id/btnGoToHudFromMainMenu"
        android:layout_toEndOf="@+id/btnGoToHudFromMainMenu"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="21dp"
        android:clickable="true" />

    <Button
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/btnMainMenuQuitApp"
        android:id="@+id/btnMainMenuQuit"
        android:background="#2f3140"
        android:textColor="#7d968d"
        android:layout_alignTop="@+id/btnMainMenuGoToRoutesMenu"
        android:layout_toRightOf="@+id/btnMainMenuGoToRoutesMenu"
        android:layout_toEndOf="@+id/btnMainMenuGoToRoutesMenu"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="21dp"
        android:clickable="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/res_menu_monochromatic_background"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView" />

</RelativeLayout>
